# sinasc_research

./: .gitignore  .pre-commit-config.yaml  DASHBOARD_DATA_SUMMARY.md  README.md  YEARLY_SUMMARY_VARIABLES.md  docker-compose.yml  inventory.py  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/: copilot-instructions.md
dashboard/: ARCHITECTURE.md  DESIGN_SYSTEM.md  QUICKSTART.md  README.md  STRUCTURE.md  app.py  requirements.txt  utils.py
dashboard_data/: README.md  metadata.json
data/: DATA_INVENTORY.md
deployment/: .dockerignore  Dockerfile  Dockerfile.python313  Procfile  README.md
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  COMPLETE_OPTIMIZATION_SUMMARY.md  DASHBOARD_DATA_SUMMARY.md  DASHBOARD_MIGRATION_PLAN.md  DATABASE_SCHEMA_RESOLUTION.md  DATALOADER_MIGRATION_COMPLETE.md  DATA_PIPELINE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_README.md  DOCUMENTATION_INDEX.md  DRY_REFACTORING_SUMMARY.md  GEOGRAPHIC_IMPLEMENTATION.md  GEOGRAPHIC_PAGES_ENHANCEMENT_PLAN.md  GEOGRAPHIC_PAGES_IMPLEMENTATION_SUMMARY.md  MAP_ENHANCEMENTS_NEXT_STEPS.md  MUNICIPAL_LEVEL_ENHANCEMENT.md  MUNICIPAL_LEVEL_IMPLEMENTATION_SUMMARY.md  MUNICIPAL_LEVEL_PAGE.md  MUNICIPAL_PAGE_ARCHITECTURE_ALIGNMENT.md  MUNICIPAL_PAGE_DATA_OPTIMIZATION.md  MUNICIPAL_PAGE_PERFORMANCE_OPTIMIZATION.md  MUNICIPAL_REDUNDANT_FUNCTION_REMOVAL.md  PIPELINE_ARCHITECTURE_VISUAL.md  PIPELINE_GEOGRAPHIC_ENHANCEMENT.md  PIPELINE_IMPROVEMENTS_SUMMARY.md  PIPELINE_OPTIMIZATION_README.md  PIPELINE_QUICK_REFERENCE.md  PRODUCTION_DATA_GRANULARITY.md  PROMOTE_CHANGES_SUMMARY.md  PROMOTE_SCRIPT_UPDATE.md  PYTHON_313_COMPATIBILITY.md  QUICKSTART.md  REGENERATE_DASHBOARD_DATA.md  SQL_OPTIMIZATION_IMPLEMENTATION.md  YEARLY_SUMMARY_VARIABLES.md  YEAR_CARDS_TABS_LAYOUT.md  YOY_CHANGE_FEATURE.md
scripts/: CODING_STANDARDS.md  clean_file.py  (+12 more)
(+82 files in other folders)
